--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tanxin-node-utils",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "a nodejs util libs for tanxin-self",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,5 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
   },
-  "dependencies": {
-    "lodash": "^4.17.15"
-  }
+  "dependencies": {}
 }
